syntax = "proto3";
package idl;
option go_package = "./";

service PublishService {
  rpc PublishVideo(PublishVideoReq) returns(PublishVideoResp);   // 视频投稿
  rpc GetVideoListByUserId(GetVideoListByUserIdReq) returns(GetVideoListByUserIdResp);  // 查询用户视频列表
}

message BaseResp {
  int64 status_code = 1;
  string status_msg = 2;
}

message VideoBaseInfo {
  int64 user_id = 1;
  string play_url = 2;
  string cover_url = 3;
  string title = 4;
}

message VideoInfo {
  int64 video_id = 1;
  VideoBaseInfo video_base_info = 2;
  int64 like_count = 3;
  int64 comment_count = 4;
  bool is_favorite = 5;
}

message PublishVideoReq {
  VideoBaseInfo video_base_info = 1;
}

message PublishVideoResp {
  BaseResp base_resp = 1;
}

message GetVideoListByUserIdReq {
  int64 app_user_id = 1;
  int64 user_id = 2;
}

message GetVideoListByUserIdResp {
  BaseResp base_resp = 1;
  repeated VideoInfo video_infos = 2;
}